# autograde-core

./: MANIFEST.in  benchmark_calibrate.py  benchmark_report.py  benchmark_runner.py  benchmark_tuned_runner.py  pyproject.toml  requirements.txt
autograde/: __init__.py  capabilities.py
autograde_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: engineering_labs_demo.py  placeholder_audit.py  production_readiness_check.py  rubric_drift_demo.py  rubric_induction_demo.py  run_course_analytics.py  run_course_simulation.py  smoke_test_api.py  system_audit.py  test_llm_live.py
tests/: test_adaptive_weighting_demo.py  test_advanced_ece_labs_profiles.py  test_artifact_modality_demo.py  test_benchmark_calibration_demo.py  test_canonicalization_demo.py  test_capability_audit_and_failures.py  test_capability_gating_demo.py  test_claim_evidence_reasoning_demo.py  test_claim_graph_demo.py  test_cohort_analytics_demo.py  test_completeness_demo.py  test_confidence_and_validation_demo.py  test_contradiction_demo.py  test_contradiction_penalty_logic.py  test_coverage_demo.py  test_demo.py  test_diagram_relation_extraction.py  test_engineering_labs_profile.py  test_engineering_logic_completion.py  test_engineering_profile_demo.py  test_evaluator_cleanup_demo.py  test_execution_probe_demo.py  test_frontend_and_upload_api.py  test_gemini_and_llm_status.py  test_humanities_logic_completion.py  test_humanities_profile_demo.py  test_hybrid_live_gating.py  test_integrity_decision_demo.py  test_lab_science_profile_demo.py  test_llm_claim_extractor_demo.py  test_llm_layer_demo.py  (+16 more)
(+174 files in other folders)
