[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autograde-core"
version = "0.1.0"
description = "Generalized multimodal autograding core with a thin FastAPI layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic>=2.7,<3",
  "uvicorn>=0.30,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autograde*"]

[tool.setuptools.package-data]
"autograde.api" = ["templates/*.html", "static/*.css"]
